--- a/index.html
+++ b/index.html
@@ -1,22 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Codificar de Alura</title>
-</head>
-<body>
-    <header>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <!-- Reset CSS -->
+    <link rel="stylesheet" href="reset.css" />
+
+    <!-- Agregar mi Estilo -->
+    <link rel="stylesheet" href="styles.css" />
+
+    <!-- Letras de google -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300&display=swap" rel="stylesheet" />
+
+    <title>Codificar de Alura</title>
+  </head>
+  <body>
+    <header>
+      <img src="Logo.png" alt="" class="icon-alura" />
     </header>
 
-    <main>
-        
+    <main class="contenido-principal">
+      <div class="text-to-encrypt">
+        <h1>Bienvenido</h1>
+        <textarea id="encrypt-area" placeholder="Escriba un texto aqui."></textarea>
+        <div class="advert">
+          <img src="interrogacion.png" alt="cuidado"/>
+          <p>Solo letras minusculas y sin acentos</p>
+        </div>
+        <div class="buttons">
+            <button class="btn" id="btn-encrypt">Encriptar</button>
+            <button class="btn" id="btn-desencrypt">Desencriptar</button>
+        </div>
+      </div>
+      <div>
+          <div class="not-encrypted">
+            <img src="munieco.png"  alt="muñeco" class="munieco">
+            <h1 id="title-encrypt">Ningun mensaje fue encontrado</h1>
+            <textarea id="text-to-encrypt" class="hide" disabled></textarea>
+            <p id="text-encrypt">Ingrese el texto que desee encriptar o desencriptar.</p>
+            <button class="btn hide" id="btn-copy">Copiar</button>
+          </div>
+      </div>
     </main>
-
-    <footer>
-        
-    </footer>
-</body>
+    <script src="scripts.js"></script>
+  </body>
 </html>
