Editing files and almost finished

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Reset CSS -->
-    <link rel="stylesheet" href="reset.css" />
+    <link rel="stylesheet" href="static/css/reset.css" />
 
     <!-- Agregar mi Estilo -->
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="static/css/styles.css" />
 
     <!-- Letras de google -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -20,7 +20,7 @@
   </head>
   <body>
     <header>
-      <img src="Logo.png" alt="" class="icon-alura" />
+      <img src="static/img/Logo.png" alt="" class="icon-alura" />
     </header>
 
     <main class="contenido-principal">
@@ -28,7 +28,7 @@
         <h1>Bienvenido</h1>
         <textarea id="encrypt-area" placeholder="Escriba un texto aqui."></textarea>
         <div class="advert">
-          <img src="interrogacion.png" alt="cuidado"/>
+          <img src="static/img/interrogacion.png" alt="cuidado"/>
           <p>Solo letras minusculas y sin acentos</p>
         </div>
         <div class="buttons">
@@ -36,9 +36,9 @@
             <button class="btn" id="btn-desencrypt">Desencriptar</button>
         </div>
       </div>
-      <div>
+      <div class="encrypted-text">
           <div class="not-encrypted">
-            <img src="munieco.png"  alt="muñeco" class="munieco">
+            <img src="static/img/munieco.png"  alt="muñeco" class="munieco">
             <h1 id="title-encrypt">Ningun mensaje fue encontrado</h1>
             <textarea id="text-to-encrypt" class="hide" disabled></textarea>
             <p id="text-encrypt">Ingrese el texto que desee encriptar o desencriptar.</p>
@@ -46,6 +46,6 @@
           </div>
       </div>
     </main>
-    <script src="scripts.js"></script>
+    <script src="static/scripts/scripts.js"></script>
   </body>
 </html>
