[EDIT] styles and html

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 
     <main class="contenido-principal">
       <div class="text-to-encrypt">
-        <h1>Bienvenido</h1>
-        <textarea id="encrypt-area" placeholder="Escriba un texto aqui."></textarea>
+        <h1>Bienvenido al codificar</h1>
+        <textarea id="encrypt-area" placeholder="Para comenzar, escriba un texto aqui para encriptarlo."></textarea>
         <div class="advert">
           <img src="static/img/interrogacion.png" alt="cuidado" />
           <p>Solo letras minusculas y sin acentos</p>
