[EDIT] Fixed some css and html changes

--- a/index.html
+++ b/index.html
@@ -12,42 +12,45 @@
     <link rel="stylesheet" href="static/css/styles.css" />
 
     <!-- Letras de google -->
-    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300&family=Rubik+Vinyl&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300&family=Rubik+Vinyl&display=swap" rel="stylesheet" />
 
     <title>Codificar de Alura</title>
   </head>
   <body>
-    <header>
-      <h1>Encryptor</h1>
-      <h1>Alura</h1>
-    </header>
-
-    <main class="contenido-principal">
-      <div class="text-to-encrypt">
-        <h1>Bienvenido al codificar</h1>
-        <textarea id="encrypt-area" placeholder="Para comenzar, escriba un texto aqui para encriptarlo."></textarea>
-        <div class="advert">
-          <img src="static/img/interrogacion.png" alt="cuidado" />
-          <p>Solo letras minusculas y sin acentos</p>
+    <div class="container">
+      <header>
+        <h1>Encryptor</h1>
+        <h1>Alura</h1>
+      </header>
+      <main class="contenido-principal">
+        <div class="text-to-encrypt">
+          <h1>Bienvenido al codificar</h1>
+          <textarea id="encrypt-area" placeholder="Para comenzar, escriba un texto aqui para encriptarlo."></textarea>
+          <div class="advert">
+            <img src="static/img/interrogacion.png" alt="cuidado" />
+            <p>Solo letras minusculas y sin acentos</p>
+          </div>
+          <div class="buttons">
+            <button class="btn" id="btn-encrypt">Cifrar</button>
+            <button class="btn" id="btn-desencrypt">Descifrar</button>
+          </div>
         </div>
-        <div class="buttons">
-          <button class="btn" id="btn-encrypt">Encriptar</button>
-          <button class="btn" id="btn-desencrypt">Desencriptar</button>
+        <div class="encrypted-text">
+          <div class="not-encrypted">
+            <img src="static/img/munieco.png" alt="muñeco" class="munieco" />
+            <h1 id="title-encrypt">Ningun mensaje fue encontrado</h1>
+            <textarea id="text-to-encrypt" class="hide" disabled></textarea>
+            <p id="text-encrypt">Ingrese el texto que desee encriptar o desencriptar.</p>
+            <button class="btn hide" id="btn-copy">Copiar</button>
+          </div>
         </div>
-      </div>
-      <div class="encrypted-text">
-        <div class="not-encrypted">
-          <img src="static/img/munieco.png" alt="muñeco" class="munieco" />
-          <h1 id="title-encrypt">Ningun mensaje fue encontrado</h1>
-          <textarea id="text-to-encrypt" class="hide" disabled></textarea>
-          <p id="text-encrypt">Ingrese el texto que desee encriptar o desencriptar.</p>
-          <button class="btn hide" id="btn-copy">Copiar</button>
-        </div>
-      </div>
-    </main>
-    <footer>
-      <p>Copyright &copy; Barco Exequiel 2022</p>
-    </footer>
-    <script src="static/scripts/scripts.js"></script>
+      </main>
+      <footer>
+        <p>Copyright &copy; Barco Exequiel 2022</p>
+      </footer>
+      <script src="static/scripts/scripts.js"></script>
+    </div>
   </body>
 </html>
